# nimc

./: .gitignore  .gitmodules  ARCHITECHTURE.md  Cargo.toml  Makefile  NOTES.md  README.md  TODO.md
src/: cli.rs  driver.alg  driver.rs  errors.rs  lexer.alg  lexer.rs  lib.rs  main.rs
tests/: lexer_test.rs
